fix: z-index and transition for AddList

--- a/src/components/AddList/AddList.scss
+++ b/src/components/AddList/AddList.scss
@@ -8,6 +8,7 @@
     border: 1px solid #F1F1F1;
     border-radius: 10px;
     padding: 20px;
+    z-index: 5;
 
     &-close-btn{
       position: absolute;
@@ -34,11 +35,13 @@
     .badge {
       width: 20px;
       height: 20px;
+      border: 2px solid transparent;
+      box-sizing: border-box;
+      transition: border 0.2s ease-in-out;
       cursor: pointer;
 
       &.active {
         border: 2px solid #525252;
-        box-sizing: border-box;
       }
     }
   }
